# celaya-parachain

./: .gitattributes  Cargo.toml  README.md  TOOL_SHOP_SUMMARY.md  plain-parachain-chainspec.json  rust-toolchain.toml  show_runtime.py  zombienet-omni-node.toml
advanced-control-station/: .env.local  .gitignore  DEMO.md  FUNCTIONALITY.md  README.md  next.config.mjs  package.json  pnpm-lock.yaml  start-station.sh  tailwind.config.js  tsconfig.json
advanced-control-station/.next/: app-build-manifest.json  build-manifest.json  trace
advanced-control-station/.next/cache/: .rscinfo
advanced-control-station/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
advanced-control-station/.next/server/app/: page.js  page_client-reference-manifest.js
advanced-control-station/.next/server/vendor-chunks/: @babel+runtime@7.27.4.js  @swc+helpers@0.5.15.js  clsx@2.1.1.js  d3-array@3.2.4.js  d3-color@3.1.0.js  d3-format@3.1.0.js  d3-interpolate@3.0.1.js  d3-path@3.1.0.js  d3-scale@4.0.2.js  d3-shape@3.2.0.js  d3-time-format@4.1.0.js  d3-time@3.1.0.js  (+16 more)
advanced-control-station/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
advanced-control-station/src/lib/: agent-runtime.ts  blockchain-service.ts  system-monitor.ts  theme-provider.tsx
c-suite-dashboard/: .eslintrc.json  README.md  ZOMBIENET_INTEGRATION.md  check-connection.sh  next.config.js  package-lock.json  package.json  start-dashboard.sh
c-suite-dashboard-v2/: AGENT_MANAGEMENT_FEATURES.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts
c-suite-dashboard-v2/server/: index.ts
c-suite-dashboard-v2/server/routes/: agents.ts  cids.ts  consensus.ts  streams.ts
c-suite-dashboard-v2/src/app/: globals.css  layout.tsx  page.tsx
c-suite-dashboard-v2/src/components/: index.ts
c-suite-dashboard-v2/src/lib/: utils.ts
c-suite-dashboard-v2/src/types/: cognitions.ts  index.ts
c-suite-dashboard/src/app/: layout.tsx  page.tsx
c-suite-dashboard/src/components/: error-boundary.tsx
c-suite-dashboard/src/lib/: ollama.ts  useApi.ts  useApi.ts.bak
devtools/: consensus_events_2025-06-01_05-50-22.json  package-lock.json  package.json
devtools/src/: consensus-replay.js  log-viewer.js
docs/: COMPREHENSIVE_TOOLS_SUMMARY.md  C_SUITE_README.md  FEATURES.md  IMPLEMENTATION_STATUS.md  LIVE_BLOCKCHAIN_INTEGRATION.md  PHASE_5_COMPLETION.md  REPORT_GENERATION_README.md  agent-arena.md  agents.md  all-tools.md  beacon-tools.md  blockchain.md  build.md  cognitions.md  dashboard-v2.md  dashboard.md  example-congnitions.md  forge.md  implementation-progress.md  integration.md  minimum-tools.md  simulation.md  tool-implementation-summary.md  updated-tools.md
node/src/: chain_spec.rs  cli.rs  command.rs
pallets/agent/: Cargo.toml
pallets/agent/src/: lib.rs  mock.rs  weights.rs
pallets/consensus/: Cargo.toml
pallets/consensus/src/: aggregate.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/recall/: Cargo.toml
pallets/recall/src/: lib.rs
pallets/reputation/: Cargo.toml
pallets/reputation/src/: lib.rs  weights.rs
polkadot-sdk-polkadot-stable2503-5/templates/parachain/: c-suite-blockchain.sh  demo_c_suite.py  local_build.toml  zombienet.toml
polkadot-sdk-polkadot-stable2503-5/templates/parachain/pallets/agent/: Cargo.toml
polkadot-sdk-polkadot-stable2503-5/templates/parachain/pallets/agent/src/: benchmarking.rs  lib.rs  tests.rs  weights.rs
polkadot-sdk-polkadot-stable2503-5/templates/parachain/pallets/consensus/: Cargo.toml
polkadot-sdk-polkadot-stable2503-5/templates/parachain/pallets/consensus/src/: benchmarking.rs  lib.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
src/app/: page.tsx
src/components/: index.ts
src/components/agents/: AgentRuntime.tsx
src/components/blockchain/: BlockchainMonitor.tsx
src/lib/blockchain/: polkadot-client.ts
src/lib/ipfs/: ipfs-client.ts
src/lib/stores/: blockchain.ts
src/types/: index.ts
telemetry/: README.md  docker-compose.yml  start-observability.sh  stop-observability.sh  vector.toml
telemetry/loki/: loki-config.yml
telemetry/otel/: otel-config.yml
telemetry/prometheus/: prometheus.yml
telemetry/tempo/: tempo-config.yml
tool_calling/: README.md  api_server.py  cognition_tools.py  demo_tool_shop.py  llm_agents.py  monitor_tool_usage.py  quick_test_toolshop.py  report_generator.py  test_api_direct.py  test_api_server.py  test_cognition_tools.py  test_comprehensive_cognition.py  test_comprehensive_tools_access.py  test_local_agents.py  test_report_generation.py  test_sandbox_reliability.py  verify_local_setup.py  verify_tool_integration.py
tool_calling/agents/beacon/: README.md  beacon_agent.py  beacon_agent_enhanced.py  beacon_cli.py  beacon_config.json  test_beacon.py
tool_calling/agents/core/: README.md  core_agent_enhanced.py  test_core.py
tool_calling/agents/echo/: README.md  echo_agent_enhanced.py  echo_cli.py  echo_config.json  test_echo.py
tool_calling/agents/lens/: README.md  lens_agent_enhanced.py  lens_cli.py  lens_config.json  test_lens.py
tool_calling/agents/lyra/: README.md  lyra_agent_enhanced.py  lyra_cli.py  lyra_config.json  test_lyra.py
tool_calling/agents/theory/: README.md  README_THEORY.md  test_theory.py  theory_agent.py  theory_agent_enhanced.py  theory_cli.py
tool_calling/agents/verdict/: README.md  test_verdict.py  verdict_agent_enhanced.py  verdict_cli.py  verdict_config.json
tool_calling/core/: all_tools_implementation.py  blockchain_client.py  comprehensive_tools.py  core_tools.py  extended_tools_part2.py  requirements.txt  tool_shop_integration.py
tool_calling/demos/: agent_toolcall_demo.py  test_tool_calling.py
tool_calling/docs/: COGNITION_TOOLS_SOLUTION.md  README_LEGACY.md  README_TOOLCALLING.md  research_topics.txt
tool_calling/storage/insight_logs/: beacon_insights_20250601.jsonl
tool_calling/storage/tool_shop/: tools_registry.json
tool_calling/storage/validation_logs/: theory_validations_20250601.jsonl
(+612 files in other folders)
