[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-parachain-template.git"
edition = "2021"

[workspace]
default-members = ["pallets/template", "pallets/reputation", "runtime"]
members = [
    "node",
    "pallets/template",
    "pallets/agent",
    "pallets/consensus",
    "pallets/reputation",
    "runtime",
]
resolver = "2"

[workspace.dependencies]
parachain-template-runtime = { path = "./runtime", default-features = false }
pallet-parachain-template = { path = "./pallets/template", default-features = false }
pallet-reputation = { path = "./pallets/reputation", default-features = false }
clap = { version = "4.5.13" }
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
color-print = { version = "0.3.4" }
docify = { version = "0.2.9" }
futures = { version = "0.3.31" }
jsonrpsee = { version = "0.24.3" }
log = { version = "0.4.22", default-features = false }
polkadot-sdk = { version = "0.12.2", default-features = false }
prometheus-endpoint = { version = "0.17.1", default-features = false, package = "substrate-prometheus-endpoint" }
sc-tracing = { version = "38.0.0", default-features = false }
serde = { version = "1.0.214", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
cumulus-pallet-parachain-system = { version = "0.18.1", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
scale-info = { version = "2.11.1", default-features = false }
smallvec = { version = "1.11.0", default-features = false }
substrate-wasm-builder = { version = "25.0.0", default-features = false }
frame = { version = "0.8.1", default-features = false, package = "polkadot-sdk-frame" }

# Frame dependencies
frame-benchmarking = { version = "39.1.0", default-features = false }
frame-support = { version = "39.1.0", default-features = false }
frame-system = { version = "39.1.0", default-features = false }

# Substrate primitives
sp-std = { version = "14.0.0", default-features = false }
sp-core = { version = "35.0.0", default-features = false }
sp-io = { version = "39.0.1", default-features = false }
sp-runtime = { version = "40.1.0", default-features = false }
sp-staking = { version = "38.0.0", default-features = false }

# Pallets
pallet-offences = { version = "38.0.0", default-features = false }
pallet-balances = { version = "39.1.0", default-features = false }
