# ----------------------------------------------------------------------------
#  File:        Cargo.toml
#  Project:     Celaya Solutions (C-Suite Blockchain)
#  Created by:  Celaya Solutions, 2025
#  Author:      Christopher Celaya <chris@celayasolutions.com>
#  Description: Cargo configuration for the agent registry pallet
#  Version:     1.0.0
#  License:     BSL (SPDX id BUSL)
#  Last Update: (May 2025)
# ----------------------------------------------------------------------------

[package]
name = "pallet-agent-registry"
version = "1.0.0"
description = "A pallet for registering and managing C-Suite agents on the blockchain"
authors = ["Christopher Celaya <chris@celayasolutions.com>"]
homepage = "https://github.com/celayasolutions/parachain-template"
edition = "2021"
license = "BUSL-1.1"
publish = false
repository = "https://github.com/celayasolutions/parachain-template"

# The file header was moved to lib.rs as a Rust comment

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
sp-std = { workspace = true, default-features = false }
frame = { workspace = true, default-features = false }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-std/std",
	"frame/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"] 