# ----------------------------------------------------------------------------
#  File:        Cargo.toml
#  Project:     Celaya Solutions (C-Suite Blockchain)
#  Created by:  Celaya Solutions, 2025
#  Author:      Christopher Celaya <chris@celayasolutions.com>
#  Description: Cargo configuration for the consensus log pallet
#  Version:     1.0.0
#  License:     BSL (SPDX id BUSL)
#  Last Update: (May 2025)
# ----------------------------------------------------------------------------

[package]
name = "pallet-consensus-log"
version = "1.0.0"
description = "A pallet for storing consensus records, insights, and agent signatures for the C-Suite blockchain"
authors = ["Christopher Celaya <chris@celayasolutions.com>"]
homepage = "https://github.com/celayasolutions/parachain-template"
edition = "2021"
license = "BUSL-1.1"
publish = false
repository = "https://github.com/celayasolutions/parachain-template"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }

# Substrate
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }

# Local dependencies
pallet-agent-registry = { path = "../agent", default-features = false }

# Offences and Slashing
sp-staking = { workspace = true }
pallet-offences = { workspace = true, optional = true }

[dev-dependencies]
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-agent-registry/std",
	"pallet-offences?/std",
	"scale-info/std",
	"sp-std/std",
	"sp-staking/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-agent-registry/runtime-benchmarks",
	"pallet-offences/runtime-benchmarks",
]

try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-agent-registry/try-runtime",
	"pallet-offences/try-runtime",
] 