# ----------------------------------------------------------------------------
#  File:        Cargo.toml
#  Project:     Celaya Solutions (C-Suite Blockchain)
#  Created by:  Celaya Solutions, 2025
#  Author:      Christopher Celaya <chris@celayasolutions.com>
#  Description: Cargo configuration for the consensus log pallet
#  Version:     1.0.0
#  License:     BSL (SPDX id BUSL)
#  Last Update: (May 2025)
# ----------------------------------------------------------------------------

[package]
name = "pallet-consensus-log"
version = "1.0.0"
description = "A pallet for storing consensus records, insights, and agent signatures for the C-Suite blockchain"
authors = ["Christopher Celaya <chris@celayasolutions.com>"]
homepage = "https://github.com/celayasolutions/parachain-template"
edition = "2021"
license = "BUSL-1.1"
publish = false
repository = "https://github.com/celayasolutions/parachain-template"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true, default-features = false }
frame = { workspace = true, features = ["experimental", "runtime"], default-features = false }
scale-info = { features = ["derive"], workspace = true, default-features = false }
pallet-agent-registry = { default-features = false, path = "../agent" }

[dev-dependencies]
frame = { workspace = true, features = ["experimental", "runtime"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame/std",
	"scale-info/std",
	"pallet-agent-registry/std",
]
runtime-benchmarks = ["frame/runtime-benchmarks"]
try-runtime = ["frame/try-runtime"] 